...
        let image = isLiked
            ? UIImage(resource: .likeButtonOn)
            : UIImage(resource: .likeButtonOff)
        likeButton.setImage(image, for: .normal)
        
        likeButton.accessibilityIdentifier = isLiked
        ? "likeButtonOn"
        : "likeButtonOff"
    }

    func setLikeLoading(_ isLoading: Bool) {
        isLoadingLike = isLoading
        likeButton.isEnabled = !isLoading
        
...
