...
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.navigationDelegate = self
        setupProgressObserver()
        presenter?.viewDidLoad()
        
        webView.accessibilityIdentifier = "UnsplashWebView"

    }
    
    // MARK: - WebViewViewControllerProtocol methods
    func load(request: URLRequest) {
        webView.load(request)
...
